[package]
name    = "tsqc"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[lib]
# Build both a Rust static lib (for tests & other crates) *and* a cdylib for PyO3.
crate-type = ["rlib", "cdylib"]

[dependencies]
pyo3        = { version = "0.25.1", features = ["extension-module"] }
bitvec      = "1.0"
rand        = "0.8"
rand_chacha = "0.3"

[dev-dependencies]
approx = "0.5"

[package.metadata.maturin]
python-packages = ["tsqc"]          # neem het hele tsqc-package op


